# autotools-template

./: .gitignore  Makefile.am  README.md  clang_complete_setup.sh  configure.ac  foobar.cpp  libfoobar.cpp
foo/: libfoobar.hpp
src/: Makefile.am  game-server  main.cpp
